// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Messenger Reply Function sends subscription result 1`] = `
Array [
  "2342388586",
  Object {
    "text": "Subscribed to The Flash ✅",
  },
]
`;

exports[`Messenger Reply Function sends un-subscription result 1`] = `
Array [
  "2342388586",
  Object {
    "text": "UnSubscribed from The Flash",
  },
]
`;
